# drk

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
docs/: COMMAND_SCHEMA_IMPLEMENTATION.md  ROADMAP.md
drk-api/: Cargo.toml
drk-api/src/: lib.rs  styling.rs
drk-cli/: Cargo.toml
drk-cli/src/: main.rs
drk-core/: Cargo.toml
drk-core/src/: lib.rs  manager.rs
plugins/drk-basic/: Cargo.toml
plugins/drk-basic/src/: lib.rs
plugins/drk-logger/: Cargo.toml
plugins/drk-logger/src/: lib.rs
plugins/drk-nix/: Cargo.toml
plugins/drk-nix/src/: lib.rs
