[package]
name = "drk-nix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Important: This makes it a compiled dynamic library

[dependencies]
drk-api = { path = "../../drk-api" }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
